http://www.grame.fr
research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010,2011
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR (ANR-08-CORD-010)
====================================================

----------------------------------------------------
Version 0.76
- new event named 'newElement' supported at scene level
- new 'name' and 'address' variables
- new system map computation making use of the new slices map provided by the
  guidolib version 1.42
- INScore API: the newMessage methods set now the message src IP to localhost
  With the previous version and the lack of src IP, replies to queries or error 
  messages were sent to undefined addresses (and mostly lost).
- bug corrected with ellipse and rect : integer graphic size computation changed 
  to float (prevents objects disappearance with small width or height)
- bug in scene export: left and right borders could be cut, depending  on the scene size
  corrected by rendering the QGraphicsView container instead the QGraphicsScene

----------------------------------------------------
Version 0.75
- new map+ message for incremental mapping
- click and select messages are deprecated
- bug in utf8 path name handling corrected (for 'img' and 'video' types)
- guido staff graphic map correction: staff change was not correctly detected

----------------------------------------------------
Version 0.74 - March 10 2011
- new 'dpage' message accepted by 'gmn' objects 
- x and y variables: automatic range type detection (int | float)
- polymorphism for the set 'txt' message params
- set 'txt' message: accepts stream like parameters

----------------------------------------------------
Version 0.73
- bug in message based variables output corrected
- bug in variables scaling corrected

----------------------------------------------------
Version 0.72